# Bybit-Triangular-Arbitrage

./: .env.sample  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  README_NEW.md  README_OLD.md  precision_cache.json  release-please-config.json
.github/actions/assume-oci-role/: action.yaml
.github/actions/build-project/: action.yaml
.github/actions/build-push-docker/: action.yaml
.github/actions/cargo-setup/: action.yaml
.github/actions/set-env/: action.yaml
.github/actions/setup-workspace/: action.yaml
.github/actions/terraform-apply/: action.yaml
.github/workflows/: deploy-project.yml  release-please.yml  terraform-destroy.yml  terraform-workflow.yml
infrastructure/: backend.tf  cloud-init.yaml  main.tf  outputs.tf  provider.tf  variables.tf
infrastructure/.terraform/modules/: modules.json
infrastructure/environments/dev/: amd.tfvars  dev.tfvars
infrastructure/environments/prod/: prod.tfvars
infrastructure/modules/computing/: compute.tf  outputs.tf  variables.tf
infrastructure/modules/networking/: network.tf  outputs.tf  variables.tf
src/: arbitrage.rs  balance.rs  client.rs  config.rs  logger.rs  main.rs  models.rs  pairs.rs  precision.rs  trader.rs  websocket.rs
